--- a/src/containers/articles/Articles.css
+++ b/src/containers/articles/Articles.css
@@ -1,30 +1,89 @@
 .article-container{
-  width: 90vw;
-  height: 500px;
+  width: 900px;
+  height: 80vh;
   display: flex;
+  flex-direction: column;
   overflow: scroll;
-  margin: 40px auto;
+  margin: 0 auto;
+  padding-top: 20px;
 }
 
 .article {
   margin: 10px 25px;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.356);
   border-radius: 5px;
-  width: 330px;
+  width: 850px;
+  transition: 0.2s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.article:hover {
+  background-color: rgba(255, 255, 255, 0.283);
 }
 
 .title-container {
   display: flex;
   align-items: center;
   height: 100px;
+  color: rgb(32, 32, 32);
+  padding: 0 30px;
+}
+
+.image-tone-container {
+  width: 830px;
+}
+
+.image-tone {
+  display: flex;
+  justify-content: center;
 }
 
 .article-image {
   height: 200px;
   width: 330px;
+  border-radius: 5px 5px 0 0;
 }
 
 .tone-data {
+  color: rgb(37, 37, 37);  
+  margin: 10px 0;
+}
+
+.tone-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.612);
+  width: 330px;
+  margin: 0 auto;
+  border-radius: 0 0 5px 5px;
+}
+
+.selected-outlet {
+  text-align: center;
+  color: #e6eaef;
+}
+
+.compare,
+.view-article {
+  height: 40px;
+  margin: 30px 20px;
+  border-radius: 5px;
+  border: none;
+  border-bottom: solid 2px #485d74;
+  background-color: #5d748c;
   color: white;
+  cursor: pointer;
+  box-shadow: 0px 3px 3px grey;
+  font-size: 14px;
+}
+
+.compare:hover,
+.view-article:hover {
+  background-color: #485d74;
+  box-shadow: 0px 1px 3px grey;
+  border-bottom: solid 2px #485d7400;
 }
