--- a/src/containers/articles/Articles.css
+++ b/src/containers/articles/Articles.css
@@ -1,8 +1,6 @@
 .article-container{
   width: 900px;
   height: 80vh;
-  display: flex;
-  flex-direction: column;
   overflow: scroll;
   margin: 0 auto;
   padding-top: 20px;
@@ -18,6 +16,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.article-container::-webkit-scrollbar {
+  width: 0px
+}
+.artcile-container::-webkit-scrollbar-track-piece {
+  background-color: transparent
 }
 
 .article:hover {
