--- a/src/containers/full-article/FullArticle.css
+++ b/src/containers/full-article/FullArticle.css
@@ -1,5 +1,5 @@
 .container {
-  height: 760px;
+  height: 92vh;
   width: 900px;
   display: flex;
   flex-direction: column;
@@ -7,6 +7,13 @@
   background-color: rgba(255, 255, 255, 0.356);
   margin: 30px auto;
   border-radius: 5px;
+}
+
+.text-container::-webkit-scrollbar {
+  width: 0px
+}
+.text-container::-webkit-scrollbar-track-piece {
+  background-color: transparent
 }
 
 .article-title {
